--- a/app/src/main/res/layout/activity_all_cases.xml
+++ b/app/src/main/res/layout/activity_all_cases.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="All Cases"
+        android:text="Cases awaiting processing:"
         android:textSize="24sp"
         android:layout_marginBottom="16dp"/>
 
