--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User Screen"
+        android:text="Welcome, user!"
         android:textSize="24sp"
         android:layout_marginBottom="32dp"/>
 
