--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ערוך פרטי משתמש"
+        android:text="Edit user details"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
@@ -20,20 +20,21 @@
         android:id="@+id/editUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="שם משתמש"
+        android:hint="username"
         android:inputType="textPersonName"
         android:focusable="false"
         android:clickable="false"
         android:longClickable="false"
         android:drawablePadding="8dp"
        android:padding="12dp"
+        android:visibility="gone"
         android:layout_marginBottom="12dp"/>
 
     <EditText
         android:id="@+id/editFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="שם מלא"
+        android:hint="full name"
         android:inputType="textPersonName"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -43,7 +44,7 @@
         android:id="@+id/editIdCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="תעודת זהות"
+        android:hint="id number"
         android:inputType="number"
         android:focusable="false"
         android:clickable="false"
@@ -56,7 +57,7 @@
         android:id="@+id/editPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="מספר טלפון"
+        android:hint="phone number"
         android:inputType="phone"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -66,7 +67,7 @@
         android:id="@+id/editEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="אימייל"
+        android:hint="email"
         android:inputType="textEmailAddress"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -76,7 +77,7 @@
         android:id="@+id/editCity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="עיר"
+        android:hint="city"
         android:inputType="textPersonName"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -86,7 +87,7 @@
         android:id="@+id/saveProfileButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="שמור שינויים"
+        android:text="save changes"
         android:textColor="@android:color/white"
         android:padding="12dp"/>
 
